2003-05-13  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update and add new tests for new type syntax.

2003-05-10  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add new test for string literal
	with quoted apostrofe and character references.
	Fix one test as '&' in string literals no longer stand for themselves.

2003-03-29  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add parameter type specification, since
	otherwise 'new File(x)' is ambiguous in JDK 1.4.

	* TestMisc.java (main):  Add two tests for substring.

	* TestMisc.java (evalTest):  Guard against null base exception.

2003-03-04  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add a test for computed constructors.

2003-01-24  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update expected error message.

2002-11-20  Per Bothner  <bothner@bothner.com>

	* TestMisc.java:  Add 3 tests for QNames for method invocation.

2002-10-22  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update 'namespace' to 'declare namespace'.

2002-07-28  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add 4 for tests for type testing.

2002-07-24  Per Bothner  <per@bothner.com>

	* TesMisc.java (eval):  Update for gnu.expr changes.

2002-06-24  Per Bothner  <per@bothner.com>

	* TestSuite.java (main):  Document.document method is renamed to parse.

2002-06-12  Per Bothner  <per@bothner.com>

	* exp-format-users.html:  First test for XSLT implementation.
	* format-users.xsl:  Expected output for latter.
	* Makefile.am (check-format-users):  New rule.

2002-06-11  Per Bothner  <per@bothner.com>

	* TestMisc.java:  New tests for descendant:: and descendant-or-self::.

2002-04-08  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Added tests for node(), text() and children().

	* use-cases.xml:  We can now use text() as in the original use-cases.

2002-03-19  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add two tests of position().

2002-03-07  Per Bothner  <per@bothner.com>
